# PartiuViajar

./: .coverage  .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml
flight_engine/: .env  create_db.py  gol_deep_source.html  kayak_dom_dump.txt  pyproject.toml  requirements.txt
flight_engine/alembic/: env.py
flight_engine/alerts/: base.py
flight_engine/api/: main.py
flight_engine/core/: config.py  feature_flags.py  security.py
flight_engine/domain/: entities.py
flight_engine/events/: bus.py  handlers.py
flight_engine/factories/: http_client_factory.py
flight_engine/infrastructure/: cache.py  db.py  models.py  registry.py
flight_engine/jobs/: scheduler.py
flight_engine/scratch/: check_hotels_db.py  clear_cache.py  create_remote_db.py  create_tables.py  debug_hotels.py  fetch_gol.py  inspect_google_flights.py  inspect_kayak_dom.py  parse.py  parse2.py  test_api.py  test_aviation.py  test_booking.py  test_capture.py  test_city.py  test_connections.py  test_geo.py  test_gol_collector.py  test_gol_deep.py  test_gol_playwright.py  test_hotels_api.py  test_kayak.py  test_ports.py  test_redis.py  test_skyscanner.py  update_signature.py
flight_engine/scripts/: migrate.py  populate_airports.py  populate_hotels.py  run_scraper.py  seed_data.py  start_api.py  start_worker.py
flight_engine/services/: accommodation_service.py  airport_service.py  airport_service.py.backup  currency_service.py  notification_service.py  search_service.py
flight_engine/static/: app.js  index.html  style.css
(+78 files in other folders)
